--- a/requirements.txt
+++ b/requirements.txt
@@ -8,9 +8,11 @@ idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.3
+narwhals==2.7.0
 numpy==2.2.6
 packaging==25.0
 pandas==2.3.3
+plotly==6.3.1
 python-dateutil==2.9.0.post0
 pytz==2025.2
 requests==2.32.5
