Ajout de l'analyse Mountain Energy Score - Haute-Savoie
Cette contribution ajoute une analyse complète de l'impact de l'altitude
sur la consommation énergétique des logements en Haute-Savoie (74).

Nouveaux fichiers :
- Scripts d'analyse (01_*.py à 08_*.py)
- Script de régénération complète (99_regenerer_tout.py)
- Configuration centralisée (config.py)
- Documentation technique (_documentation/)
- Statistiques et tableaux (graphiques/*.csv)
- requirements.txt pour les dépendances

Résultats clés :
- +8,5 kWh/m²/an par 100m d'altitude
- Analyse sur 202 829 logements
- Visualisations interactives avec Plotly

Améliorations des fichiers existants :
- .gitignore : fusion des règles + exclusion fichiers volumineux (>100MB)
- README.md : ajout d'une section pour l'analyse altitude

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,64 @@
-.DS_Store
-.vscode/
+# Python
 __pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+env/
+venv/
+ENV/
+env_projet_ml/
 enedis-env/
-web/volume/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Jupyter Notebook
+.ipynb_checkpoints
+
+# IDEs
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# Fichiers système
+.DS_Store
+Thumbs.db
+
+# Données générées (peuvent être recréées)
+data/processed/
+graphiques/*.html
+graphiques/*.png
 models/data/*.csv
+web/volume/
+
+# Fichiers de données brutes trop volumineux (> 100 MB)
+data/raw/*.csv
+
+# Sauvegardes et archives
+*_BACKUP_*/
+*.bak
+_archive/
+
+# Logs
+*.log
+
+# Fichiers temporaires
+*.tmp
+.cache/
 test.py
 test2.py
