--- a/web/requirements.txt
+++ b/web/requirements.txt
@@ -16,6 +16,7 @@ plotly==6.3.1
 python-dateutil==2.9.0.post0
 pytz==2025.2
 requests==2.32.5
+scipy==1.15.3
 six==1.17.0
 tzdata==2025.2
 urllib3==2.5.0
