--- a/web/requirements.txt
+++ b/web/requirements.txt
@@ -7,6 +7,7 @@ gunicorn==23.0.0
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
+joblib==1.5.2
 MarkupSafe==3.0.3
 narwhals==2.7.0
 numpy==2.2.6
@@ -16,8 +17,10 @@ plotly==6.3.1
 python-dateutil==2.9.0.post0
 pytz==2025.2
 requests==2.32.5
+scikit-learn==1.5.2
 scipy==1.15.3
 six==1.17.0
+threadpoolctl==3.6.0
 tzdata==2025.2
 urllib3==2.5.0
 Werkzeug==3.1.3
