Updated Dockerfile and .dockerignore

--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -4,13 +4,13 @@ FROM python:3.10.6
 WORKDIR /app
 
 # Copy the requirements file into the container
-COPY web/requirements.txt .
+COPY requirements.txt .
 
 # Install the dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy the application code into the container
-COPY web/ .
+COPY . .
 
 # Set the environment variable for the volume
 ENV MOUNT_PATH=/app/volume
@@ -21,5 +21,5 @@ RUN mkdir -p $MOUNT_PATH
 # Expose the port the app runs on
 EXPOSE 8000
 
-# Run the application with Gunicorn
+# Command to run the application with Gunicorn
 CMD ["gunicorn", "--bind", ":8000", "--timeout", "180", "app:app"]
